vpc.tf
resource "aws_vpc" "empire_vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true
}

resource "aws_internet_gateway" "default" {
  vpc_id = "${aws_vpc.empire_vpc.id}"
}
